@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(drumkv1, 0.3.6, rncbc@rncbc.org)
+AC_INIT(drumkv1, 0.3.6.1, rncbc@rncbc.org)
 
 AC_CONFIG_SRCDIR(src/drumkv1.cpp)
 AC_CONFIG_HEADERS(src/config.h)
